--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,12 @@
 /* 
     General Styles
 */
+.scrolling-wrapper-flexbox {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+
+  .card {
+    flex: 0 0 auto;
+  }
+}
